# dataguard-agent

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SESSION_MEMORY.md  conftest.py  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
dashboard/: index.html
deploy/argocd/: application.yaml
deploy/grafana/dashboards/: dashboards.yaml  pipeline-sentinel.json
deploy/helm/dataguard-sentinel/: Chart.yaml  values.yaml
deploy/helm/dataguard-sentinel/templates/: _helpers.tpl  deployment.yaml  service.yaml
deploy/marquez/: marquez.yaml
deploy/prometheus/: prometheus.yml
docs/: index.md  mcp-tools.md  quickstart.md
docs/case-studies/: index.md
docs/tutorials/: index.md
examples/: claude-desktop-config.json
examples/airflow-local-demo/dags/: failing_pipelines.py
scripts/: benchmark.sh  seed-demo-data.sh
