[project]
name = "dataguard-agent"
version = "0.1.0"
description = "Monorepo for DataGuard Agent — MCP-native agentic observability for data pipelines"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres,redis]>=4.7",
    "mypy>=1.10",
    "pyright>=1.1.370",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "httpx>=0.27",
    "faker>=25.0",
]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM", "RUF", "ASYNC"]
ignore = [
    "ANN101",  # missing self type annotation
    "ANN102",  # missing cls type annotation
    "ANN401",  # Any is sometimes necessary
    "E501",    # line too long — formatter handles this
]

[tool.ruff.lint.isort]
known-first-party = ["dataguard_core", "dataguard_adapters", "pipeline_sentinel"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "N806"]
"**/tests/**" = ["ANN", "S101", "N806"]

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", ".venv/"]

[[tool.mypy.overrides]]
module = ["litellm.*", "hera.*", "openlineage.*", "testcontainers.*"]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "tests"]
addopts = "-v --tb=short --import-mode=importlib"
markers = [
    "integration: requires live infrastructure (postgres, redis)",
    "e2e: requires full docker compose stack",
    "slow: marks slow tests",
]

[tool.coverage.run]
source = ["packages/core/src", "packages/adapters/src", "packages/sentinel/src", "packages/agents/src"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
fail_under = 75
